--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -158,6 +158,9 @@
 
     <button type="submit" class="kho-button-forms kho-button-submit">{{ title }}</button>
   </form>
-  {{ form.media }}
+
+  <article class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+    {{ form.media }}
+  </article>
 
 {% endblock content %}
