--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -138,73 +138,55 @@
     </section>
 
     <section class="mb-2">
-      {{ form.withdrawn.label_tag }}
-      <div class="form-check">
-        {{ form.withdrawn|add_class:"form-check-input" }}
+      <div class="input-group gap-2">
+        <div class="form-floating">
+          {{ form.withdrawn.label_tag }}
+          {{ form.withdrawn|add_class:"form-check"|attr:"placeholder:Post publication state" }}
+          {% if form.withdrawn.help_text %}
+            <div class="text-sm">{{ form.withdrawn.help_text }}</div>
+          {% endif %}
+        </div>
+        <div class="form-floating">
+          {{ form.is_outdated.label_tag }}
+          {{ form.is_outdated|add_class:"form-check"|attr:"placeholder:Post featuring state" }}
+          {% if form.is_outdated.help_text %}
+            <div class="text-sm">{{ form.is_outdated.help_text }}</div>
+          {% endif %}
+        </div>
+        <div class="form-floating">
+          {{ form.needs_reviewing.label_tag }}
+          {{ form.needs_reviewing|add_class:"form-check"|attr:"placeholder:Post featuring state" }}
+          {% if form.needs_reviewing.help_text %}
+            <div class="text-sm">{{ form.needs_reviewing.help_text }}</div>
+          {% endif %}
+        </div>
       </div>
-      {% if form.withdrawn.help_text %}
-        <span class="text-sm">{{ form.withdrawn.help_text }}</span>
-      {% endif %}
-      {% for error in form.withdrawn.errors %}
-        <small class="text-flamingo-600">{{ error }}</small>
-      {% endfor %}
     </section>
 
     <section class="mb-2">
-      {{ form.is_outdated.label_tag }}
-      <div class="form-check">
-        {{ form.is_outdated|add_class:"form-check-input" }}
+      <div class="input-group gap-2">
+        <div class="form-floating">
+          {{ form.publication_state.label_tag }}
+          {{ form.publication_state|add_class:"form-select"|attr:"placeholder:Post publication state" }}
+          {% if form.publication_state.help_text %}
+            <span class="text-sm">{{ form.publication_state.help_text }}</span>
+          {% endif %}
+        </div>
+        <div class="form-floating">
+          {{ form.featuring_state.label_tag }}
+          {{ form.featuring_state|add_class:"form-select"|attr:"placeholder:Post featuring state" }}
+          {% if form.featuring_state.help_text %}
+            <span class="text-sm">{{ form.featuring_state.help_text }}</span>
+          {% endif %}
+        </div>
       </div>
-      {% if form.is_outdated.help_text %}
-        <span class="text-sm">{{ form.is_outdated.help_text }}</span>
-      {% endif %}
-      {% for error in form.is_outdated.errors %}
-        <small class="text-flamingo-600">{{ error }}</small>
-      {% endfor %}
-    </section>
-
-    <section class="mb-2">
-      {{ form.needs_reviewing.label_tag }}
-      <div class="form-check">
-        {{ form.needs_reviewing|add_class:"form-check-input" }}
-      </div>
-      {% if form.needs_reviewing.help_text %}
-        <span class="text-sm">{{ form.needs_reviewing.help_text }}</span>
-      {% endif %}
-      {% for error in form.needs_reviewing.errors %}
-        <small class="text-flamingo-600">{{ error }}</small>
-      {% endfor %}
-    </section>
-
-    <section class="mb-2">
-      <div class="form-floating">
-        {{ form.featuring_state.label_tag }}
-        {{ form.featuring_state|add_class:"form-select"|attr:"placeholder:Post featuring state" }}
-      </div>
-      {% if form.featuring_state.help_text %}
-        <span class="text-sm">{{ form.featuring_state.help_text }}</span>
-      {% endif %}
-      {% for error in form.featuring_state.errors %}
-        <small class="text-flamingo-600">{{ error }}</small>
-      {% endfor %}
-    </section>
-
-    <section class="mb-2">
-      <div class="form-floating">
-        {{ form.publication_state.label_tag }}
-        {{ form.publication_state|add_class:"form-select"|attr:"placeholder:Post publication state" }}
-      </div>
-      {% if form.publication_state.help_text %}
-        <span class="text-sm">{{ form.publication_state.help_text }}</span>
-      {% endif %}
-      {% for error in form.publication_state.errors %}
-        <small class="text-flamingo-600">{{ error }}</small>
-      {% endfor %}
     </section>
 
     <section class="mb-2">
       {{ form.pub_date.label_tag }}
-      {{ form.pub_date|add_class:"form-control picker" }}
+      <div class="flex gap-2 w-1/4">
+        {{ form.pub_date|add_class:"form-control picker" }}
+      </div>
       {% if form.pub_date.help_text %}
         <span class="text-sm">{{ form.pub_date.help_text }}</span>
       {% endif %}
@@ -248,8 +230,8 @@
     <button type="submit" class="kho-button-forms kho-button-submit">{{ title }}</button>
   </form>
 
-  <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+  <article class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
     {{ form.media }}
-  </div>
+  </article>
 
 {% endblock content %}
