bug fix with checkboxes

--- a/blog/templates/blog/create_category.html
+++ b/blog/templates/blog/create_category.html
@@ -9,6 +9,6 @@
 
     {% form form %}
 
-    <button type="submit" class="kho-button-forms kho-button-submit">{{ title }}</button>
+    <button type="submit" class="kho-button-forms kho-button-submit mt-2">{{ title }}</button>
   </form>
 {% endblock content %}
