--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -110,9 +110,9 @@
         {% for tag in object.get_tags %}
           {% spaceless %}
             <li class="inline">
-              <a href="{% url 'custom_taggit:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border px-3 py-0.5" style="background-color: {{ tag.color }}33">
+              <a href="{% url 'custom_taggit:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border px-3 py-0.5" style="background-color: {{ tag.color }}33; border-color: {{ tag.color }}">
                 <div class="absolute flex-shrink-0 flex items-center justify-center">
-                  <span class="h-1.5 w-1.5 rounded-full" style="background-color: {{ tag.color }}; border-color: {{ tag.color }}" aria-hidden="true"></span>
+                  <span class="h-1.5 w-1.5 rounded-full" style="background-color: {{ tag.color }}" aria-hidden="true"></span>
                 </div>
                 <div class="ml-3.5 text-sm font-medium" style="color: {{ tag.color }}">{{ tag }}</div>
               </a>
