--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -119,7 +119,7 @@
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
       <section class="px-4 sm:px-6 lg:px-8">
-        <section class="max-w-2xl xl:max-w-7xl mx-auto">
+        <section class="max-w-2xl md:max-w-4xl xl:max-w-7xl mx-auto">
           {% block content %}
           {% endblock content %}
         </section>
