more simplification of CSS, fix in post forms

--- a/khoBlog/templates/markdownx/widget.html
+++ b/khoBlog/templates/markdownx/widget.html
@@ -2,5 +2,7 @@
     <textarea name="{{ widget.name }}" placeholder="" {% include "django/forms/widgets/attrs.html" %}>
 {% if widget.value %}{{ widget.value }}{% endif %}</textarea>
     <label for="id_body">{{ widget.name|capfirst }}</label>
-    <div class="markdownx-preview"></div>
+    <article class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+        <div class="markdownx-preview"></div>
+    </article>
 </div>
