--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
 
 {% block content_main %}
   <div class="xl:grid xl:grid-cols-3">
-    <div class="xl:col-span-2 xl:pr-8 xl:border-r xl:border-gray-200">
+    <div class="xl:col-span-2 xl:pr-8 xl:border-r xl:border-gray-200 dark:xl:border-jumbo-200">
       <nav class="flex justify-between" role="group" aria-label="Previous / Next">
         {% if prev_post %}
           <a type="button" class="next_prev_buttons" href="{{ prev_post.get_absolute_url }}">
@@ -46,7 +46,7 @@
           </button>
         {% endif %}
       </nav>
-      <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
+      <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-200 xl:pb-6">
         <div>
           <h1 class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ object.title }}</h1>
           <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
