--- a/pages/templates/pages/default.html
+++ b/pages/templates/pages/default.html
@@ -15,9 +15,9 @@
   {% if not page.withdrawn or user.is_superuser %}
     <div class="xl:grid xl:grid-cols-3">
       <div class="xl:col-span-2 xl:pr-8">
-        <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
+        <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-200 xl:pb-6">
           <div>
-            <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-300">{{ page.title }}</span>
+            <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ page.title }}</span>
             <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-500">
               Page <span class="font-bold">#{{ page.pk }}</span>
             </p>
